# api.yml
@@ -11,70 +11,7 @@ consumes:
   - application/json
 produces:
   - application/json
-paths:
-
-  # version -------------------------------------------------------------------
-
-  /version:
-    get:
-      operationId: getVersion
-      tags:
-        - version
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/Version'
-        default:
-          description: Unexpected Error
-          schema:
-            $ref: '#/definitions/Error'
-
-  /version/{version}:
-    get:
-      operationId: findVersion
-      tags:
-        - version
-      parameters:
-        - in: path
-          name: version
-          type: string
-          required: true
-      responses:
-        200:
-          description: OK
-        404:
-          description: Not Found
-          schema:
-            $ref: '#/definitions/Error'
-        default:
-          description: Unexpected Error
-          schema:
-            $ref: '#/definitions/Error'
-    put:
-      operationId: updateVersion
-      tags:
-        - version
-      parameters:
-        - in: path
-          name: version
-          type: string
-          required: true
-      responses:
-        202:
-          description: Accepted
-        400:
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/Error'
-        404:
-          description: Not Found
-          schema:
-            $ref: '#/definitions/Error'
-        default:
-          description: Unexpected Error
-          schema:
-            $ref: '#/definitions/Error'
+paths: {}
 
 definitions:
 
